cmake_minimum_required(VERSION 3.10)
# project(unix_server)

# set(TARGET_NAME helloworld)

add_executable(main main.cpp)
add_executable(maincreate maincreate.cpp)
add_executable(mainsigaction mainsigaction.cpp)
add_executable(mainsigactionthread mainsigactionthread.cpp)


add_executable(main2 main2.cpp)
add_executable(mainfork mainfork.cpp)